Sun Aug  1 18:14:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * bin/make_release.py:
        * docs/Download.html:
        * etc/index.html:
          Updated because of release

        * debian/*:
          Did rename actions the release script didn't do, have to sort this
          out later

Sun Aug 01 11:30:54 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 5.8.1 released.

Thu Jul 29 14:41:32 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Process.h (set_handles): Clarify that passing ACE_INVALID_HANDLE
          for any of the handle values will cause a duplicate of the
          corresponding ACE_STDIN/OUT/ERR to be used in the options.

Thu Jul 29 10:43:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
        * bin/MakeProjectCreator/config/inetssl.mpb:
        * protocols/ace/INet/inet_ssl.mpb:
          Created a new feature, inet_ssl. When set, the INet libary
          builds, using SSL. To let the INet libary use SSL, one should
          enable the inet_ssl feature in default.features and add ssl=1 to
          the platform_macos.GNU.

Mon Jul 26 20:26:53 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.h: Note that the cpu_set_size to the get/set
          affinity methods is a byte count.

Mon Jul 26 07:02:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inet.mpb:
        * protocols/ace/INet/inet.mpc:
          Added avoids += corba_e_compact.

Thu Jul 22 04:35:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inet.mpb:
        * protocols/ace/INet/inet.mpc:
          Added avoids += ace_for_tao.

Wed Jul 21 18:23:32 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Basic_Types.h (ACE_INT8_FORMAT_SPECIFIER): Added the missing