@@ -208,22 +208,22 @@
 
   <ul>
     <li>
-      <p><a href="tao/ciao/ciao/index.html">CIAO:</a> CIAO's core
+      <p><a href="ciao/ciao/index.html">CIAO:</a> CIAO's core
       implementation.</p>
     </li>
 
     <li>
-      <p><a href="tao/ciao/dance/index.html">DAnCE:</a> CIAO's
+      <p><a href="dance/index.html">DAnCE:</a> CIAO's
       Deployment and Configuration Engine.</p>
     </li>
 
     <li>
-      <p><a href="tao/ciao/tools/config_handlers/index.html">Config Handlers:</a> CIAO's
+      <p><a href="ciao/tools/config_handlers/index.html">Config Handlers:</a> CIAO's
       Config Handlers.</p>
     </li>
 
     <li>
-      <p><a href="tao/ciao/dds4ccm/index.html">DDS4CCM:</a> CIAO's
+      <p><a href="ciao/dds4ccm/index.html">DDS4CCM:</a> CIAO's
       DDS4CCM.</p>
     </li>
   </ul>
