@@ -1,3 +1,10 @@
+Tue Aug  3 12:14:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/generate_doxygen.pl:
+        * html/index.html:
+          DAnCE has its own file now and also some documentation got moved
+          out of the tao directory
+
 Sun Aug  1 18:14:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * NEWS:
